--- a/index.html
+++ b/index.html
@@ -1,12 +1,20 @@
 <html>
   <head>
       <meta charset="UTF-8">
-      <title> My Webpage </title>
+      <title> JavaJam Coffee House </title>
   </head>
 
   <body>
-    <h1> My Webpage </h1>
-    <p1> I like playing video games and programming. Looking forward to Half Life Alyx cominng out this March and Cyberpunk 2077. I've also taken two web design classes</p1>
+    <h1> JavaJam Coffee House </h1>
+    <nav>
+      <b>
+        <a href="index.html">Home &nbsp</a>
+        <a href="menu.html">Menu &nbsp</a>
+        <a href="music.html">Music &nbsp</a>
+        <a href="jobs.html">Jobs &nbsp</a>
+
+      </b>
+    </nav>
 
     <ul>
       <li>google.com</li>
