--- a/menu.html
+++ b/menu.html
@@ -6,7 +6,7 @@
 
   <body>
 
-    <h1> JavaJam Coffee House </h1>
+    <h1> JavaJam Coffee House Menu </h1>
     <nav>
       <b>
         <a href="index.html">Home &nbsp</a>
@@ -21,15 +21,19 @@
 
     <div>
 
-    <h2>Relax at JavaJam</h2>
+    <h2>Coffee at JavaJam</h2>
 
-    <ul>
-      <li>Specialty Coffee and Tea</li>
-      <li>Bagels, Muffins, and Gluten-free Pastries</li>
-      <li>Organic Salads</li>
-      <li>Music and Poetry Readings </li>
-      <li>Open Mic Night</li>
-    </ul>
+    <dt>
+      <dd><<strong>Just Java</strong></dd>
+      <dd>Regular house blend, decaffeinated coffe, or flavor of the day.</dd>
+      <dd>Endless Cup $3.00</dd>
+      <dd><strong>Cafe au Lait</strong></dd>
+      <dd>House blended coffee infused into a smooth, steamed milk.</dd>\
+      <dd>Single $2.00 Double $4.00</dd>
+      <dd><strong>Iced Cappuccino</strong></dd>
+      <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass.</dd>
+      <dd>Single $4.75 Double $6.00</dd>
+    </dt>
 
   </div>
 
