--- a/menu.html
+++ b/menu.html
@@ -23,17 +23,17 @@
 
     <h2>Coffee at JavaJam</h2>
 
-    <dt>
-      <dd><<strong>Just Java</strong></dd>
-      <dd>Regular house blend, decaffeinated coffe, or flavor of the day.</dd>
+
+      <dt><strong>Just Java</strong></dt>
+      <dd>Regular house blend, decaffeinated coffee, or flavor of the day.</dd>
       <dd>Endless Cup $3.00</dd>
-      <dd><strong>Cafe au Lait</strong></dd>
-      <dd>House blended coffee infused into a smooth, steamed milk.</dd>\
+      <dt><strong>Cafe au Lait</strong></dt>
+      <dd>House blended coffee infused into a smooth, steamed milk.</dd>
       <dd>Single $2.00 Double $4.00</dd>
-      <dd><strong>Iced Cappuccino</strong></dd>
+      <dt><strong>Iced Cappuccino</strong></dt>
       <dd>Sweetened espresso blended with icy-cold milk and served in a chilled glass.</dd>
       <dd>Single $4.75 Double $6.00</dd>
-    </dt>
+
 
   </div>
 
@@ -48,11 +48,11 @@
 
   <br>
 
-    <footer>
-      <p><small> <i> Copyright @ 2018 JavaJam Coffee House </i></small></p>
-      <br>
-      <a href="mailto: sinatra@frank.com"><small> <i>yourfirstname@yourlastname.com</i></small></a>
-    </footer>
+  <footer>
+    <p><small> <i> Copyright @ 2018 JavaJam Coffee House </i></small><br /><a href="mailto: sinatra@frank.com"><small> <i>yourfirstname@yourlastname.com</i></small></a></p>
+
+
+  </footer>
 
     </body>
 
