--- a/menu.html
+++ b/menu.html
@@ -9,10 +9,10 @@
     <h1> JavaJam Coffee House Menu </h1>
     <nav>
       <b>
-        <a href="index.html">Home &nbsp</a>
-        <a href="menu.html">Menu &nbsp</a>
-        <a href="music.html">Music &nbsp</a>
-        <a href="jobs.html">Jobs &nbsp</a>
+        <a href="index.html">Home </a>&nbsp
+        <a href="menu.html">Menu </a>&nbsp
+        <a href="music.html">Music </a>&nbsp
+        <a href="jobs.html">Jobs </a>&nbsp
 
       </b>
     </nav>
@@ -37,13 +37,8 @@
 
   </div>
 
-  <br>
-
   <div>
-    <p>12010 Garrett Bay Road </p>
-    <p>Ellison Bay, WI 54210</p>
-    <p>888-555-555</p>
-
+    <p>12010 Garrett Bay Road <br />Ellison Bay, WI 54210 <br />888-555-555</p>
   </div>
 
   <br>
