--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <link rel="stylesheet" href="javajam.css">
       <meta charset="UTF-8">
       <title> JavaJam Coffee House </title>
   </head>
@@ -8,13 +9,10 @@
 
     <h1> JavaJam Coffee House </h1>
     <nav>
-      <b>
         <a href="index.html">Home</a>&nbsp
         <a href="menu.html">Menu</a>&nbsp
         <a href="music.html">Music</a>&nbsp
         <a href="jobs.html">Jobs</a>&nbsp
-
-      </b>
     </nav>
 
     <br>
@@ -40,7 +38,7 @@
 
 
     <footer>
-      <p><small> <i> Copyright @ 2018 JavaJam Coffee House </i></small><br /><a href="mailto: sinatra@frank.com"><small> <i>yourfirstname@yourlastname.com</i></small></a></p>
+      <p> Copyright @ 2018 JavaJam Coffee House<br /><a href="mailto: sinatra@frank.com"> yourfirstname@yourlastname.com</a></p>
 
 
     </footer>
