YOUR MASTER HAS ARRIVED

--- a/menu.html
+++ b/menu.html
@@ -1,20 +1,21 @@
 <html>
   <head>
       <meta charset="UTF-8">
-      <title> JavaJam Coffee House </title>
+      <title> JavaJam Coffee House Menu</title>
+      <link rel="stylesheet" href="javajam.css">
   </head>
 
-  <body>
+  <body id="container">
 
     <h1> JavaJam Coffee House Menu </h1>
     <nav>
-      <b>
+
         <a href="index.html">Home</a>&nbsp
         <a href="menu.html">Menu</a>&nbsp
         <a href="music.html">Music</a>&nbsp
         <a href="jobs.html">Jobs</a>&nbsp
 
-      </b>
+
     </nav>
 
     <br>
@@ -40,7 +41,7 @@
 
 
   <footer>
-    <p><small> <i> Copyright @ 2018 JavaJam Coffee House </i></small><br /><a href="mailto: sinatra@frank.com"><small> <i>yourfirstname@yourlastname.com</i></small></a></p>
+    <p> Copyright @ 2018 JavaJam Coffee House<br /><a href="mailto: sinatra@frank.com"> yourfirstname@yourlastname.com</a></p>
 
 
   </footer>
