--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <title> JavaJam Coffee House </title>
   </head>
 
-  <body>
+  <body id="container">
 
     <h1> JavaJam Coffee House </h1>
     <nav>
